# coding-agent-setting

./: .dockerignore  .env.local  .gitignore  CLAUDE.md  Dockerfile  cloudbuild.yaml  conftest.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
agent/: .env.example  __init__.py  agent.py  main.py  pyproject.toml  requirements.txt  state.py  tools.py
agent/tests/: query_data_analysis.py  test_agent.py  test_example_queries.py  test_main.py  test_tools.py
app/: globals.css  layout.tsx  page.tsx
app/claude-code-components/: page.tsx
app/claude-code-components/hooks/: page.tsx
app/claude-code-components/mcp/: page.tsx
app/claude-code-components/skills/: page.tsx
app/claude-code-components/subagents/: page.tsx
app/setup/: page.tsx
components/ui/: animated-shader-hero.tsx  feature-detail.tsx  interactive-hover-links.tsx  nav-hover-button.tsx  setup-flow.tsx
docs/: example-queries.md
docs/plans/: 2026-02-28-claude-code-setup-agent-design.md  2026-02-28-claude-code-setup-agent-implementation.md
docs/superpowers/plans/: 2026-03-21-agent-improvement.md
docs/superpowers/specs/: 2026-03-21-agent-improvement-design.md
