[project]
name = "claude-code-setup-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.2"
dependencies = [
    "fastapi==0.115.6",
    "httpx[test]==0.28.1",
    "langchain-anthropic>=0.3.3",
    "langfuse>=3.14.5",
    "langgraph==1.0.10",
    "langsmith>=0.7.9",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.32.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
